index.html git ibr yazıldı.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     <div>
       <p>merhaba github index.html</p>
       <h1>meraha edit file</h1>
+      <h1>meraha git ibr</h1>
+      <h1>meraha git ibr</h1>
+      <h1>meraha git ibr</h1>
+      <h1>meraha git ibr</h1>
     </div>
   </body>
 </head>
