--- a/hakkinizda.html
+++ b/hakkinizda.html
@@ -3,5 +3,7 @@
     <h1>bu yeni branc</h1>
     <p>hakkimizda</p>
     <p>commit 1</p>
+    <p>commit 1</p>
+    <p>commit son hali</p>
   </div>
 </hakkimizda>
