--- a/ürünler.html
+++ b/ürünler.html
@@ -1,7 +1,6 @@
 <Ürünler>
   <div>
     <h1>Ürünler</h1>
-    <p>bu yeni branc</p>
-    <h3> bu yeni commit</h3>
+   <p>bu yeni commit</p>
   </div>
 </Ürünler>
