bu ibr-dev branch commit

--- a/hakkinizda.html
+++ b/hakkinizda.html
@@ -1,9 +1,5 @@
 <hakkimizda>
   <div>
-    <h1>bu yeni branc</h1>
-    <p>hakkimizda</p>
-    <p>commit 1</p>
-    <p>commit 1</p>
-    <p>commit son hali</p>
+    <p>ibr dev branch</p>
   </div>
 </hakkimizda>
