--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
 <head>
   <body>
     <div>
-      <p>merhaba github index.html</p>
-      <h1>meraha edit file</h1>
-      <h1>meraha git ibr</h1>
-      <h1>meraha git ibr</h1>
-      <h1>meraha git ibr</h1>
-      <h1>meraha git ibr</h1>
+      <p>ibr dev branch</p>
     </div>
   </body>
 </head>
